updated with necessary changes

--- a/MusicAmp/MusicAmp.csproj
+++ b/MusicAmp/MusicAmp.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Player\Player.csproj" />
     <ProjectReference Include="..\PlaylistEditing\PlaylistEditing.csproj" />
   </ItemGroup>
 
