--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PlaylistEditing\PlaylistEditing.csproj" />
+  </ItemGroup>
+
 </Project>
